--- a/public/404.html
+++ b/public/404.html
@@ -3,7 +3,7 @@
   lang="en-us"
   dir="ltr"
 >
-  <head><script src="/livereload.js?mindelay=10&amp;v=2&amp;port=1313&amp;path=livereload" data-no-instant defer></script>
+  <head>
     <meta charset="utf-8" />
 <meta name="language" content="en" />
 <meta name="viewport" content="width=device-width" />
@@ -11,7 +11,7 @@
     404 Page not found | Lelah&#39;s Blog
 </title>
 <meta name="robots" content="noindex" />
-<meta property="og:url" content="http://localhost:1313/404.html">
+<meta property="og:url" content="https://example.com/404.html">
   <meta property="og:site_name" content="Lelah&#39;s Blog">
   <meta property="og:title" content="404 Page not found">
   <meta property="og:locale" content="en_us">
@@ -23,12 +23,22 @@
   <meta name="twitter:card" content="summary">
   <meta name="twitter:title" content="404 Page not found">
 
-<link rel="canonical" href="http://localhost:1313/404.html" />
+<link rel="canonical" href="https://example.com/404.html" />
 
-    <link rel="stylesheet" href="/css/index.css" />
+      <link
+        rel="stylesheet"
+        href="/css/index.min.f8a65cc8c325821f285bc0748829de9cda4cfcba962787612f5d731e4c2c3bc6.css"
+        integrity="sha256-&#43;KZcyMMlgh8oW8B0iCnenNpM/LqWJ4dhL11zHkwsO8Y="
+        crossorigin="anonymous"
+      />
 
 
-      <script src="/js/main.js" defer></script>
+      <script
+        src="/js/main.74d7b2e03532c4d7c21ae0192f88d1d2410ae2b18acd8de20f4c186609db168b.js"
+        integrity="sha256-dNey4DUyxNfCGuAZL4jR0kEK4rGKzY3iD0wYZgnbFos="
+        crossorigin="anonymous"
+        defer
+      ></script>
   
 
 <script type="application/ld+json">
@@ -87,7 +97,7 @@
     <ul>
       <li>Return to the <a href="/">home page</a>.</li>
       <li>
-        <a href="https://web.archive.org/web/*/http//localhost1313/404.html"
+        <a href="https://web.archive.org/web/*/https//example.com/404.html"
           >See if the Internet Archive has a copy</a
         >
         if you believe this page once existed.
