--- a/public/graph/index.html
+++ b/public/graph/index.html
@@ -3,14 +3,14 @@
   lang="en-us"
   dir="ltr"
 >
-  <head><script src="/livereload.js?mindelay=10&amp;v=2&amp;port=1313&amp;path=livereload" data-no-instant defer></script>
+  <head>
     <meta charset="utf-8" />
 <meta name="language" content="en" />
 <meta name="viewport" content="width=device-width" />
 <title>
     Content Graph | Lelah&#39;s Blog
 </title>
-<meta property="og:url" content="http://localhost:1313/graph/">
+<meta property="og:url" content="https://example.com/graph/">
   <meta property="og:site_name" content="Lelah&#39;s Blog">
   <meta property="og:title" content="Content Graph">
   <meta property="og:locale" content="en_us">
@@ -22,12 +22,22 @@
   <meta name="twitter:card" content="summary">
   <meta name="twitter:title" content="Content Graph">
 
-<link rel="canonical" href="http://localhost:1313/graph/" /><link rel="alternate" type="application/json" href="http://localhost:1313/graph/index.json" />
+<link rel="canonical" href="https://example.com/graph/" /><link rel="alternate" type="application/json" href="https://example.com/graph/index.json" />
 
-    <link rel="stylesheet" href="/css/index.css" />
+      <link
+        rel="stylesheet"
+        href="/css/index.min.f8a65cc8c325821f285bc0748829de9cda4cfcba962787612f5d731e4c2c3bc6.css"
+        integrity="sha256-&#43;KZcyMMlgh8oW8B0iCnenNpM/LqWJ4dhL11zHkwsO8Y="
+        crossorigin="anonymous"
+      />
 
 
-      <script src="/js/main.js" defer></script>
+      <script
+        src="/js/main.74d7b2e03532c4d7c21ae0192f88d1d2410ae2b18acd8de20f4c186609db168b.js"
+        integrity="sha256-dNey4DUyxNfCGuAZL4jR0kEK4rGKzY3iD0wYZgnbFos="
+        crossorigin="anonymous"
+        defer
+      ></script>
   
 
 <script type="application/ld+json">
