--- a/public/notes/testnote1/index.html
+++ b/public/notes/testnote1/index.html
@@ -3,7 +3,7 @@
   lang="en-us"
   dir="ltr"
 >
-  <head><script src="/livereload.js?mindelay=10&amp;v=2&amp;port=1313&amp;path=livereload" data-no-instant defer></script>
+  <head>
     <meta charset="utf-8" />
 <meta name="language" content="en" />
 <meta name="viewport" content="width=device-width" />
@@ -11,7 +11,7 @@
     Test note | Lelah&#39;s Blog
 </title>
   <meta name="description" content="this is a test note" />
-<meta property="og:url" content="http://localhost:1313/notes/testnote1/">
+<meta property="og:url" content="https://example.com/notes/testnote1/">
   <meta property="og:site_name" content="Lelah&#39;s Blog">
   <meta property="og:title" content="Test note">
   <meta property="og:description" content="this is a test note">
@@ -32,18 +32,28 @@
   <meta name="twitter:title" content="Test note">
   <meta name="twitter:description" content="this is a test note">
 
-<link rel="canonical" href="http://localhost:1313/notes/testnote1/" />
+<link rel="canonical" href="https://example.com/notes/testnote1/" />
 
-    <link rel="stylesheet" href="/css/index.css" />
+      <link
+        rel="stylesheet"
+        href="/css/index.min.f8a65cc8c325821f285bc0748829de9cda4cfcba962787612f5d731e4c2c3bc6.css"
+        integrity="sha256-&#43;KZcyMMlgh8oW8B0iCnenNpM/LqWJ4dhL11zHkwsO8Y="
+        crossorigin="anonymous"
+      />
 
 
-      <script src="/js/main.js" defer></script>
+      <script
+        src="/js/main.74d7b2e03532c4d7c21ae0192f88d1d2410ae2b18acd8de20f4c186609db168b.js"
+        integrity="sha256-dNey4DUyxNfCGuAZL4jR0kEK4rGKzY3iD0wYZgnbFos="
+        crossorigin="anonymous"
+        defer
+      ></script>
   
 
 <script type="application/ld+json">
 {
   "@context": "https://schema.org/",
-  "@id": "http://localhost:1313/notes/testnote1/",
+  "@id": "https://example.com/notes/testnote1/",
   "@type": "BlogPosting",
   "author": {
     "@type": "Person",
@@ -55,14 +65,14 @@
   "description": "this is a test note",
   "headline": "Test Note",
   "isPartOf": {
-    "@id": "http://localhost:1313/notes/",
+    "@id": "https://example.com/notes/",
     "@type": "Blog",
     "name": "Notes"
   },
-  "mainEntityOfPage": "http://localhost:1313/notes/testnote1/",
+  "mainEntityOfPage": "https://example.com/notes/testnote1/",
   "name": "Test Note",
   "timeRequired": "PT1M",
-  "url": "http://localhost:1313/notes/testnote1/",
+  "url": "https://example.com/notes/testnote1/",
   "wordCount": 5
 }
 </script>
