Changed "baseURL" to https://lelahandco.github.io/

--- a/graph/index.html
+++ b/graph/index.html
@@ -10,7 +10,7 @@
 <title>
     Content Graph | Lelah&#39;s Blog
 </title>
-<meta property="og:url" content="https://example.com/graph/">
+<meta property="og:url" content="https://lelahandco.github.io/graph/">
   <meta property="og:site_name" content="Lelah&#39;s Blog">
   <meta property="og:title" content="Content Graph">
   <meta property="og:locale" content="en_us">
@@ -22,7 +22,7 @@
   <meta name="twitter:card" content="summary">
   <meta name="twitter:title" content="Content Graph">
 
-<link rel="canonical" href="https://example.com/graph/" /><link rel="alternate" type="application/json" href="https://example.com/graph/index.json" />
+<link rel="canonical" href="https://lelahandco.github.io/graph/" /><link rel="alternate" type="application/json" href="https://lelahandco.github.io/graph/index.json" />
 
       <link
         rel="stylesheet"
