--- a/notes/index.html
+++ b/notes/index.html
@@ -10,7 +10,7 @@
 <title>
     Notes | Lelah&#39;s Blog
 </title>
-<meta property="og:url" content="https://example.com/notes/">
+<meta property="og:url" content="https://lelahandco.github.io/notes/">
   <meta property="og:site_name" content="Lelah&#39;s Blog">
   <meta property="og:title" content="Notes">
   <meta property="og:locale" content="en_us">
@@ -24,7 +24,7 @@
   <meta name="twitter:card" content="summary">
   <meta name="twitter:title" content="Notes">
 
-<link rel="canonical" href="https://example.com/notes/" /><link rel="alternate" type="application/rss&#43;xml" href="https://example.com/notes/index.xml" /><link rel="alternate" type="application/json" href="https://example.com/notes/index.json" />
+<link rel="canonical" href="https://lelahandco.github.io/notes/" /><link rel="alternate" type="application/rss&#43;xml" href="https://lelahandco.github.io/notes/index.xml" /><link rel="alternate" type="application/json" href="https://lelahandco.github.io/notes/index.json" />
 
       <link
         rel="stylesheet"
