--- a/404.html
+++ b/404.html
@@ -11,7 +11,7 @@
     404 Page not found | Lelah&#39;s Blog
 </title>
 <meta name="robots" content="noindex" />
-<meta property="og:url" content="https://example.com/404.html">
+<meta property="og:url" content="https://lelahandco.github.io/404.html">
   <meta property="og:site_name" content="Lelah&#39;s Blog">
   <meta property="og:title" content="404 Page not found">
   <meta property="og:locale" content="en_us">
@@ -23,7 +23,7 @@
   <meta name="twitter:card" content="summary">
   <meta name="twitter:title" content="404 Page not found">
 
-<link rel="canonical" href="https://example.com/404.html" />
+<link rel="canonical" href="https://lelahandco.github.io/404.html" />
 
       <link
         rel="stylesheet"
@@ -97,7 +97,7 @@
     <ul>
       <li>Return to the <a href="/">home page</a>.</li>
       <li>
-        <a href="https://web.archive.org/web/*/https//example.com/404.html"
+        <a href="https://web.archive.org/web/*/https//lelahandco.github.io/404.html"
           >See if the Internet Archive has a copy</a
         >
         if you believe this page once existed.
