--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <title>
     Lelah&#39;s Blog
 </title>
-<meta property="og:url" content="https://example.com/">
+<meta property="og:url" content="https://lelahandco.github.io/">
   <meta property="og:site_name" content="Lelah&#39;s Blog">
   <meta property="og:title" content="Lelah&#39;s Blog">
   <meta property="og:locale" content="en_us">
@@ -25,7 +25,7 @@
   <meta name="twitter:card" content="summary">
   <meta name="twitter:title" content="Lelah&#39;s Blog">
 
-<link rel="canonical" href="https://example.com/" />
+<link rel="canonical" href="https://lelahandco.github.io/" />
 
       <link
         rel="stylesheet"
