--- a/notes/index.html
+++ b/notes/index.html
@@ -139,10 +139,10 @@
           <header class="grow">
             <h3>
               <a
-                href="/notes/testnote1/"
+                href="/notes/hello-world/"
                 class="truncate text-sm underline decoration-slate-300 decoration-2 underline-offset-4 hover:decoration-inherit"
-                title="Test note"
-                >Test note</a
+                title="Hello world"
+                >Hello world</a
               >
             </h3>
           </header>
