--- a/code/index.html
+++ b/code/index.html
@@ -8,21 +8,21 @@
 <meta name="language" content="en" />
 <meta name="viewport" content="width=device-width" />
 <title>
-    Templates | Lelah&#39;s Blog
+    Codes | Lelah&#39;s Blog
 </title>
-<meta property="og:url" content="https://lelahandco.github.io/templates/">
+<meta property="og:url" content="https://lelahandco.github.io/code/">
   <meta property="og:site_name" content="Lelah&#39;s Blog">
-  <meta property="og:title" content="Templates">
+  <meta property="og:title" content="Codes">
   <meta property="og:locale" content="en_us">
   <meta property="og:type" content="website">
 
 
-  <meta itemprop="name" content="Templates">
+  <meta itemprop="name" content="Codes">
 
   <meta name="twitter:card" content="summary">
-  <meta name="twitter:title" content="Templates">
+  <meta name="twitter:title" content="Codes">
 
-<link rel="canonical" href="https://lelahandco.github.io/templates/" /><link rel="alternate" type="application/rss&#43;xml" href="https://lelahandco.github.io/templates/index.xml" /><link rel="alternate" type="application/json" href="https://lelahandco.github.io/templates/index.json" />
+<link rel="canonical" href="https://lelahandco.github.io/code/" /><link rel="alternate" type="application/rss&#43;xml" href="https://lelahandco.github.io/code/index.xml" /><link rel="alternate" type="application/json" href="https://lelahandco.github.io/code/index.json" />
 
       <link
         rel="stylesheet"
@@ -51,7 +51,7 @@
   },
   "copyrightNotice": "Lelah van Eijnsbergen",
   "description": "",
-  "headline": "Templates"
+  "headline": "Codes"
 }
 </script>
 
@@ -86,30 +86,17 @@
       </header>
       <main class="prose prose-slate relative md:prose-lg prose-h1:text-[2em]" id="maincontent">
         
-  <h1>Templates</h1>
+  <h1>Codes</h1>
 
   
   
-    <h2><a href="/templates/note-template/"></a></h2>
-    <p>&lt;%*
-function toSlug(title) {
-return title
-.toLowerCase()
-.normalize(&ldquo;NFD&rdquo;)
-.replace(/[\u0300-\u036f]/g, &ldquo;&rdquo;)
-.replace(/[^a-z0-9\s-]/g, &ldquo;&rdquo;)
-.trim()
-.replace(/\s+/g, &ldquo;-&rdquo;);
-}</p>
-<h3 id="-" class="scroll-mt-8 group">
-  let qcFileName = await tp.system.prompt(&ldquo;Post Title&rdquo;)
-let titleName = toSlug(qcFileName);
-await tp.file.rename (titleName);
-await tp.file.move(&quot;/notes/&quot; + titleName &ldquo;/index&rdquo;);
-await this.app.vault.createFolder(&quot;/notes/&quot; + titleName + &ldquo;/images&rdquo;);
--%&gt;
+    <h2><a href="/code/code-upload-site/"></a></h2>
+    <p>#reference
+<em>All in powershell (run as administrator)</em></p>
+<h2 id="open-local-server" class="scroll-mt-8 group">
+  open local server
   
-    <a href="#-"
+    <a href="#open-local-server"
         class="no-underline hidden opacity-50 hover:opacity-100 !text-inherit group-hover:inline-block"
         aria-hidden="true" title="Link to this heading" tabindex="-1">
         <svg
@@ -130,17 +117,47 @@ await this.app.vault.createFolder(&quot;/notes/&quot; + titleName + &ldquo;/imag
 
     </a>
   
-</h3>
-<h3 id="tags-" class="scroll-mt-8 group">
-  title: &lt;% qcFileName %&gt;
-date: &lt;% tp.file.creation_date(&ldquo;YYYY-MM-DDTHH:mm:ssZ&rdquo;) %&gt;
-draft: false
-tags: []
-  
-    <a href="#tags-"
-        class="no-underline hidden opacity-50 hover:opacity-100 !text-inherit group-hover:inline-block"
-        aria-hidden="true" title="Link to this heading" tabindex="-1">
-        <svg
+</h2>
+<figure class="codeblock not-prose relative scroll-mt-8" id="codeblock-01">
+  <aside
+    class="absolute right-0 top-0 hidden rounded-bl-sm rounded-tr-sm bg-white/10 px-2 py-1 text-white/70 transition-opacity md:inline-block"
+  >
+    <div class="codeblock-meta flex max-w-xs flex-row items-center space-x-3">
+      <div class="small-caps shrink cursor-default truncate font-mono text-xs" aria-hidden="true">
+        <span class="relative"></span>
+      </div>
+      <div>
+        <clipboard-copy
+          type="button"
+          aria-label="Copy code to clipboard"
+          title="Copy code to clipboard"
+          class="block cursor-pointer transition-colors hover:text-sky-400"
+          target="#codeblock-01 code"
+        >
+          <svg
+  xmlns="http://www.w3.org/2000/svg"
+  fill="none"
+  stroke="currentColor"
+  stroke-width="2"
+  stroke-linecap="round"
+  stroke-linejoin="round"
+  class="lucide lucide-clipboard h-4 w-4"
+  viewBox="0 0 24 24"
+>
+  <rect width="8" height="4" x="8" y="2" rx="1" ry="1" />
+  <path d="M16 4h2a2 2 0 0 1 2 2v14a2 2 0 0 1-2 2H6a2 2 0 0 1-2-2V6a2 2 0 0 1 2-2h2" />
+</svg>
+
+        </clipboard-copy>
+      </div>
+      <div>
+        <a
+          href="#codeblock-01"
+          class="block"
+          aria-label="Link to this code block"
+          title="Link to this code block"
+        >
+          <svg
   xmlns="http://www.w3.org/2000/svg"
   width="16"
   height="16"
@@ -156,79 +173,11 @@ tags: []
   <path d="M14 11a5 5 0 0 0-7.54-.54l-3 3a5 5 0 0 0 7.07 7.07l1.71-1.71" />
 </svg>
 
-    </a>
-  
-</h3>
-  
-    <h2><a href="/templates/post-template/"></a></h2>
-    <p>&lt;%*
-function toSlug(title) {
-return title
-.toLowerCase()
-.normalize(&ldquo;NFD&rdquo;)
-.replace(/[\u0300-\u036f]/g, &ldquo;&rdquo;)
-.replace(/[^a-z0-9\s-]/g, &ldquo;&rdquo;)
-.trim()
-.replace(/\s+/g, &ldquo;-&rdquo;);
-}</p>
-<h3 id="-" class="scroll-mt-8 group">
-  let qcFileName = await tp.system.prompt(&ldquo;Post Title&rdquo;)
-let titleName = toSlug(qcFileName);
-await tp.file.rename (titleName);
-await tp.file.move(&quot;/posts/&quot; + titleName + &ldquo;/index&rdquo;);
-await this.app.vault.createFolder(&quot;/posts/&quot; + titleName + &ldquo;/images&rdquo;);
--%&gt;
-  
-    <a href="#-"
-        class="no-underline hidden opacity-50 hover:opacity-100 !text-inherit group-hover:inline-block"
-        aria-hidden="true" title="Link to this heading" tabindex="-1">
-        <svg
-  xmlns="http://www.w3.org/2000/svg"
-  width="16"
-  height="16"
-  fill="none"
-  stroke="currentColor"
-  stroke-linecap="round"
-  stroke-linejoin="round"
-  stroke-width="2"
-  class="lucide lucide-link w-4 h-4 block"
-  viewBox="0 0 24 24"
->
-  <path d="M10 13a5 5 0 0 0 7.54.54l3-3a5 5 0 0 0-7.07-7.07l-1.72 1.71" />
-  <path d="M14 11a5 5 0 0 0-7.54-.54l-3 3a5 5 0 0 0 7.07 7.07l1.71-1.71" />
-</svg>
-
-    </a>
-  
-</h3>
-<h3 id="tags-" class="scroll-mt-8 group">
-  title: &lt;% qcFileName %&gt;
-date: &lt;% tp.file.creation_date(&ldquo;YYYY-MM-DDTHH:mm:ssZ&rdquo;) %&gt;
-draft: false
-tags: []
-  
-    <a href="#tags-"
-        class="no-underline hidden opacity-50 hover:opacity-100 !text-inherit group-hover:inline-block"
-        aria-hidden="true" title="Link to this heading" tabindex="-1">
-        <svg
-  xmlns="http://www.w3.org/2000/svg"
-  width="16"
-  height="16"
-  fill="none"
-  stroke="currentColor"
-  stroke-linecap="round"
-  stroke-linejoin="round"
-  stroke-width="2"
-  class="lucide lucide-link w-4 h-4 block"
-  viewBox="0 0 24 24"
->
-  <path d="M10 13a5 5 0 0 0 7.54.54l3-3a5 5 0 0 0-7.07-7.07l-1.72 1.71" />
-  <path d="M14 11a5 5 0 0 0-7.54-.54l-3 3a5 5 0 0 0 7.07 7.07l1.71-1.71" />
-</svg>
-
-    </a>
-  
-</h3>
+        </a>
+      </div>
+    </div>
+  </aside>
+  <p class="sr-only"> code snippet start</p>
   
 
       </main>
