Add: main page text

--- a/code/code-upload-site/index.html
+++ b/code/code-upload-site/index.html
@@ -25,7 +25,7 @@ open local server code snippet start">
   <meta itemprop="name" content="Lelah&#39;s Blog">
   <meta itemprop="description" content="#reference All in powershell (run as administrator)
 open local server code snippet start">
-  <meta itemprop="wordCount" content="58">
+  <meta itemprop="wordCount" content="72">
 
   <meta name="twitter:card" content="summary">
   <meta name="twitter:title" content="Lelah&#39;s Blog">
@@ -368,11 +368,12 @@ open local server code snippet start">
     </div>
   </aside>
   <p class="sr-only"> code snippet start</p>
-  <pre tabindex="0"><code>; git add .; git commit -m &#39;[YOUR COMMIT TITLE HERE]&#39; -a; git push ## push the changes</code></pre>
+  <pre tabindex="0"><code>git add .; git commit -m &#39;[YOUR COMMIT TITLE HERE]&#39; -a; git push ## push the changes</code></pre>
   <p class="sr-only"> code snippet end</p>
 
   
 </figure>
+<p>git add .; git commit -m &lsquo;Test: images&rsquo; -a; git push ## push the changes</p>
 
   </article>
 
