--- a/code/code-upload-site/index.html
+++ b/code/code-upload-site/index.html
@@ -25,7 +25,7 @@ open local server code snippet start">
   <meta itemprop="name" content="Lelah&#39;s Blog">
   <meta itemprop="description" content="#reference All in powershell (run as administrator)
 open local server code snippet start">
-  <meta itemprop="wordCount" content="72">
+  <meta itemprop="wordCount" content="106">
 
   <meta name="twitter:card" content="summary">
   <meta name="twitter:title" content="Lelah&#39;s Blog">
@@ -373,7 +373,9 @@ open local server code snippet start">
 
   
 </figure>
-<p>git add .; git commit -m &lsquo;Add: 🐢&rsquo; -a; git push ## push the changes</p>
+<p>git add .; git commit -m &lsquo;Add: 🐢&rsquo; -a; git push ## push the changes
+git add .; git commit -m &lsquo;page: Share Spaces&rsquo; -a; git push ## push the changes
+git add .; git commit -m &lsquo;Add Play-fleetingness &amp; modern nature&rsquo; -a; git push ## push the changes</p>
 
   </article>
 
