Update layout page: Play, Feetingness...

--- a/code/code-upload-site/index.html
+++ b/code/code-upload-site/index.html
@@ -25,7 +25,7 @@ open local server code snippet start">
   <meta itemprop="name" content="Lelah&#39;s Blog">
   <meta itemprop="description" content="#reference All in powershell (run as administrator)
 open local server code snippet start">
-  <meta itemprop="wordCount" content="106">
+  <meta itemprop="wordCount" content="108">
 
   <meta name="twitter:card" content="summary">
   <meta name="twitter:title" content="Lelah&#39;s Blog">
@@ -375,7 +375,7 @@ open local server code snippet start">
 </figure>
 <p>git add .; git commit -m &lsquo;Add: 🐢&rsquo; -a; git push ## push the changes
 git add .; git commit -m &lsquo;page: Share Spaces&rsquo; -a; git push ## push the changes
-git add .; git commit -m &lsquo;Add Play-fleetingness &amp; modern nature&rsquo; -a; git push ## push the changes</p>
+git add .; git commit -m &lsquo;page: Play, Feetingness&hellip; &amp; note: Modern Nature&rsquo; -a; git push ## push the changes</p>
 
   </article>
 
