Update errors page: Play, Feetingness...

--- a/code/code-upload-site/index.html
+++ b/code/code-upload-site/index.html
@@ -25,7 +25,7 @@ open local server code snippet start">
   <meta itemprop="name" content="Lelah&#39;s Blog">
   <meta itemprop="description" content="#reference All in powershell (run as administrator)
 open local server code snippet start">
-  <meta itemprop="wordCount" content="151">
+  <meta itemprop="wordCount" content="153">
 
   <meta name="twitter:card" content="summary">
   <meta name="twitter:title" content="Lelah&#39;s Blog">
@@ -377,7 +377,7 @@ open local server code snippet start">
 git add .; git commit -m &lsquo;page: Share Spaces&rsquo; -a; git push ## push the changes
 git add .; git commit -m &lsquo;page: Play, Feetingness&hellip; &amp; note: Modern Nature&rsquo; -a; git push ## push the changes
 git add .; git commit -m &lsquo;Update layout page: Play, Feetingness&hellip; &rsquo; -a; git push ## push the changes
-git add .; git commit -m &lsquo;Update errors page: Play, Feetingness&hellip; &amp; Add note: grandpas and snails&rsquo; -a; git push ## push the changes</p>
+git add .; git commit -m &lsquo;Update errors &amp; poem page: Play, Feetingness&hellip; &amp; Add note: grandpas and snails&rsquo; -a; git push ## push the changes</p>
 
   </article>
 
